--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 18:05:04 2018</p>
+         Last Run: Thu Jul 19 19:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>07:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>34</td>
-                        <td>44</td>
-                        <td>1</td>
-                        <td>13</td>
-                        <td>SE</td>
-                        <td>78</td>
-                     </tr>
-                     <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
                         <td>22</td>
-                        <td>48</td>
+                        <td>22</td>
+                        <td>15</td>
+                        <td>49</td>
                         <td>0</td>
-                        <td>14</td>
-                        <td>ESE</td>
-                        <td>59</td>
+                        <td>13</td>
+                        <td>SE</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -83,7 +71,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "07:00 PM",
              "08:00 PM"
            ],
            "datasets":[
@@ -93,8 +80,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "22",
-                 "21"
+                 "22"
                ]
              },
              {
@@ -103,8 +89,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "22",
-                 "21"
+                 "22"
                ]
              }
            ]
@@ -145,7 +130,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "07:00 PM",
              "08:00 PM"
            ],
            "datasets":[
@@ -154,8 +138,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "34",
-                 "22"
+                 "15"
                ]
              },
              {
@@ -163,8 +146,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
-                 "48"
+                 "49"
                ]
              },
              {
@@ -172,8 +154,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
-                 "59"
+                 "58"
                ]
              }
            ]
@@ -191,7 +172,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 18:05:04 2018</p>
+         Last Run: Thu Jul 19 19:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -230,7 +211,7 @@
                         <td>0</td>
                         <td>36</td>
                         <td>4</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
                         <td>10</td>
                      </tr>
@@ -244,7 +225,7 @@
                         <td>6</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>13</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -254,9 +235,9 @@
                         <td>15</td>
                         <td>27</td>
                         <td>7</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>40</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -268,7 +249,7 @@
                         <td>7</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>40</td>
+                        <td>39</td>
                      </tr>
                   </tbody>
                </table>
@@ -410,9 +391,9 @@
                "data":[
                  "6",
                  "10",
-                 "13",
-                 "40",
-                 "40"
+                 "12",
+                 "39",
+                 "39"
                ]
              }
            ]
@@ -429,7 +410,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 18:05:04 2018</p>
+         Last Run: Thu Jul 19 19:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -458,7 +439,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>19</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -470,7 +451,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>13</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -610,8 +591,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
-                 "13",
+                 "17",
+                 "12",
                  "9"
                ]
              }
@@ -629,7 +610,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 18:05:04 2018</p>
+         Last Run: Thu Jul 19 19:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -651,62 +632,62 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>12</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>2</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>50</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>12</td>
-                        <td>38</td>
+                        <td>13</td>
+                        <td>39</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>E</td>
-                        <td>50</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>12</td>
-                        <td>43</td>
+                        <td>13</td>
+                        <td>44</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>51</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>20</td>
-                        <td>20</td>
-                        <td>22</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>ENE</td>
-                        <td>50</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Partly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>31</td>
-                        <td>60</td>
+                        <td>24</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NE</td>
-                        <td>50</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -752,10 +733,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "25",
+                 "24",
                  "23",
                  "22",
-                 "20",
+                 "19",
                  "17"
                ]
              },
@@ -765,10 +746,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "25",
+                 "24",
                  "23",
                  "22",
-                 "20",
+                 "19",
                  "17"
                ]
              }
@@ -823,10 +804,10 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "12",
-                 "12",
-                 "12",
-                 "22",
-                 "31"
+                 "13",
+                 "13",
+                 "20",
+                 "24"
                ]
              },
              {
@@ -834,11 +815,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "34",
-                 "38",
-                 "43",
-                 "51",
-                 "60"
+                 "35",
+                 "39",
+                 "44",
+                 "52",
+                 "61"
                ]
              },
              {
@@ -846,11 +827,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "50",
-                 "51",
-                 "50",
-                 "50"
+                 "53",
+                 "53",
+                 "53",
+                 "53",
+                 "53"
                ]
              }
            ]
