--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 20:05:16 2018</p>
+         Last Run: Thu Jul 19 21:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,20 +33,20 @@
                         <td>Clear</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>1</td>
-                        <td>41</td>
+                        <td>0</td>
+                        <td>39</td>
                         <td>3</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>6</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>34</td>
                         <td>4</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -57,12 +57,12 @@
                         <td>Clear</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>0</td>
-                        <td>30</td>
+                        <td>1</td>
+                        <td>29</td>
                         <td>6</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>12</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -82,11 +82,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>15</td>
-                        <td>26</td>
+                        <td>25</td>
                         <td>7</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>39</td>
+                        <td>37</td>
                      </tr>
                   </tbody>
                </table>
@@ -133,7 +133,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "17",
-                 "18",
+                 "19",
                  "20",
                  "21",
                  "22"
@@ -146,7 +146,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "17",
-                 "18",
+                 "19",
                  "20",
                  "21",
                  "22"
@@ -202,9 +202,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "0",
+                 "0",
                  "1",
-                 "0",
-                 "0",
                  "15",
                  "15"
                ]
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "41",
-                 "36",
-                 "30",
+                 "39",
+                 "34",
+                 "29",
                  "27",
-                 "26"
+                 "25"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "6",
+                 "8",
                  "10",
-                 "12",
+                 "14",
                  "39",
-                 "39"
+                 "37"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 20:05:16 2018</p>
+         Last Run: Thu Jul 19 21:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -272,11 +272,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>2</td>
-                        <td>35</td>
+                        <td>34</td>
                         <td>1</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>23</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -288,15 +288,15 @@
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>16</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>4</td>
-                        <td>46</td>
+                        <td>5</td>
+                        <td>45</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
@@ -410,7 +410,7 @@
                "data":[
                  "2",
                  "2",
-                 "4"
+                 "5"
                ]
              },
              {
@@ -418,9 +418,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
+                 "34",
                  "38",
-                 "46"
+                 "45"
                ]
              },
              {
@@ -428,8 +428,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "23",
                  "16",
+                 "13",
                  "11"
                ]
              }
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 20:05:16 2018</p>
+         Last Run: Thu Jul 19 21:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -471,60 +471,60 @@
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>15</td>
-                        <td>36</td>
+                        <td>13</td>
+                        <td>35</td>
                         <td>2</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>52</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>15</td>
-                        <td>40</td>
+                        <td>14</td>
+                        <td>39</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>E</td>
-                        <td>52</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>15</td>
-                        <td>45</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>13</td>
+                        <td>44</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>52</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>21</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ENE</td>
-                        <td>51</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Partly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>30</td>
+                        <td>24</td>
                         <td>62</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NE</td>
-                        <td>50</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -572,8 +572,8 @@
                "data":[
                  "24",
                  "23",
-                 "21",
-                 "19",
+                 "22",
+                 "20",
                  "17"
                ]
              },
@@ -585,8 +585,8 @@
                "data":[
                  "24",
                  "23",
-                 "21",
-                 "19",
+                 "22",
+                 "20",
                  "17"
                ]
              }
@@ -640,11 +640,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "15",
-                 "15",
-                 "15",
+                 "13",
+                 "14",
+                 "13",
                  "21",
-                 "30"
+                 "24"
                ]
              },
              {
@@ -652,10 +652,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
-                 "40",
-                 "45",
-                 "53",
+                 "35",
+                 "39",
+                 "44",
+                 "52",
                  "62"
                ]
              },
@@ -664,11 +664,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
-                 "52",
-                 "52",
                  "51",
-                 "50"
+                 "51",
+                 "51",
+                 "50",
+                 "49"
                ]
              }
            ]
