--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 08:05:03 2018</p>
+         Last Run: Fri Jul 20 09:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>45</td>
                         <td>3</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>2</td>
+                        <td>0</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -46,11 +46,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>37</td>
                         <td>4</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>4</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>6</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>6</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -70,10 +70,10 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>26</td>
+                        <td>27</td>
                         <td>7</td>
                         <td>11</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>38</td>
                      </tr>
                      <tr>
@@ -84,7 +84,7 @@
                         <td>15</td>
                         <td>24</td>
                         <td>6</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>WSW</td>
                         <td>50</td>
                      </tr>
@@ -214,10 +214,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
-                 "36",
-                 "29",
-                 "26",
+                 "45",
+                 "37",
+                 "30",
+                 "27",
                  "24"
                ]
              },
@@ -226,9 +226,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "2",
-                 "4",
-                 "6",
+                 "0",
+                 "1",
+                 "3",
                  "38",
                  "50"
                ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 08:05:03 2018</p>
+         Last Run: Fri Jul 20 09:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -268,7 +268,7 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
@@ -276,7 +276,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>28</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -288,7 +288,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>ENE</td>
-                        <td>17</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -300,7 +300,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>NE</td>
-                        <td>10</td>
+                        <td>11</td>
                      </tr>
                   </tbody>
                </table>
@@ -428,9 +428,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
-                 "17",
-                 "10"
+                 "30",
+                 "18",
+                 "11"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 08:05:03 2018</p>
+         Last Run: Fri Jul 20 09:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -476,14 +476,14 @@
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>58</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>36</td>
                         <td>1</td>
                         <td>13</td>
@@ -508,7 +508,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>24</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
@@ -516,10 +516,10 @@
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Mostly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>31</td>
+                        <td>24</td>
                         <td>56</td>
                         <td>0</td>
                         <td>8</td>
@@ -641,10 +641,10 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "10",
-                 "11",
+                 "10",
                  "11",
                  "24",
-                 "31"
+                 "24"
                ]
              },
              {
@@ -655,7 +655,7 @@
                  "33",
                  "36",
                  "40",
-                 "47",
+                 "48",
                  "56"
                ]
              },
@@ -664,7 +664,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
+                 "57",
                  "59",
                  "60",
                  "61",
